--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,20 @@
 {
   "manifest_version": 3,
-  "name": "Stripe Autofill",
+  "name": "AutoCheckout Extension",
   "version": "1.0",
-  "permissions": ["scripting", "activeTab", "storage"],
-  "host_permissions": ["https://checkout.stripe.com/*"],
+  "description": "Automatically fill forms based on BIN data.",
+  "permissions": ["storage", "activeTab", "scripting"],
   "action": {
     "default_popup": "popup.html",
-    "default_icon": {
-      "16": "assets/icon.png",
-      "48": "assets/icon.png",
-      "128": "assets/icon.png"
-    }
+    "default_icon": "icon.png"
   },
   "background": {
     "service_worker": "background.js"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ]
 }
