--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,17 @@
 {
-  "manifest_version": 3,
-  "name": "AutoCheckout Extension",
+  "manifest_version": 2,
+  "name": "DestroyerX Auto-Fill Popup",
   "version": "1.0",
-  "description": "Automatically fill forms based on BIN data.",
-  "permissions": ["storage", "activeTab", "scripting"],
-  "action": {
-    "default_popup": "popup.html",
-    "default_icon": "icon.png"
-  },
-  "background": {
-    "service_worker": "background.js"
+  "description": "Adds a floating popup for auto-filling forms.",
+  "permissions": ["activeTab", "storage", "tabs"],
+  "icons": {
+    "128": "icons/icon.png"
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["js/content.js"],
+      "css": ["styles/content.css"]
     }
   ]
 }
