--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "DestroyerX Auto-Fill Popup",
+  "name": "Philo Tool",
   "version": "1.0",
-  "description": "Adds a floating popup for auto-filling forms.",
+  "description": "Automatically fills and submits form data with retry mechanism.",
   "permissions": ["activeTab", "storage", "tabs"],
   "icons": {
     "128": "icons/icon.png"
