--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
   "name": "Philo Tool",
-  "version": "1.0",
-  "description": "Automatically fills and submits form data with retry mechanism.",
+  "version": "1.1",
+  "description": "Enhanced UI with Auto Retry for card generation and form filling.",
   "permissions": ["activeTab", "storage", "tabs"],
   "icons": {
     "128": "icons/icon.png"
