--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,25 @@
 {
-  "manifest_version": 2,
-  "name": "Philo Tool",
-  "version": "1.1",
-  "description": "Enhanced UI with Auto Retry for card generation and form filling.",
-  "permissions": ["activeTab", "storage", "tabs"],
-  "icons": {
-    "128": "icons/icon.png"
+  "manifest_version": 3,
+  "name": "Auto Stripe",
+  "version": "1.0",
+  "description": "Automates Stripe form submissions with randomization and real-time status.",
+  "permissions": ["activeTab", "scripting"],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "https://files.catbox.moe/xs5mnp.jpg",
+      "48": "https://files.catbox.moe/xs5mnp.jpg",
+      "128": "https://files.catbox.moe/xs5mnp.jpg"
+    }
+  },
+  "host_permissions": ["https://*.stripe.com/*"],
+  "background": {
+    "service_worker": "background.js"
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["js/content.js"],
-      "css": ["styles/content.css"]
+      "matches": ["https://*.stripe.com/*"],
+      "js": ["content.js"]
     }
   ]
 }
